style pictures, add widget section, add bucket list, add fav color, add my pet, fix spacing around images and p

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: Helvetica, Arial, Sans-serif;
   background-color:#45ECDB;
 }
-p {
+.future-goal {
   color:#000000;
   background-color:#66ccff;
   border: solid 5px #000000;
@@ -14,7 +14,9 @@ p {
   width: 800px;
   text-align: left;
   margin-left: 100px;
-  margin-top: 50px;
+  margin-top: 5px;
+  line-height: 20px;
+  max-width: 740px;
 }
 h1 {
   text-align: center;
@@ -33,11 +35,12 @@ h1 {
   max-width: 500px;
   max-height: 300px;
   margin-top: 45px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 h4 {
-  margin-left: 200px;
+  margin-left: 100px;
   display: block;
+  margin-bottom: 47px;
 }
 h2 {
   text-decoration: underline;
@@ -48,3 +51,43 @@ a:hover {
 img {
   border: 2px solid #0D168F;
 }
+aside h4 {
+  text-decoration: underline;
+  font-size: 20px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+aside p {
+  font-family: Times, Arial, Sans-serif;
+  margin-left: 100px;
+  color: #8F0D3C;
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+ul {
+  margin-left: 85px;
+  list-style-type: none;
+  margin-top: 10px;
+  padding-left: 15px;
+}
+.green {
+  color: #10A346;
+  font-family: Helvetica;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.cute {
+  margin-bottom: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
